# furrybait

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: main.rs
