[package]
name = "furrybait"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana libraries
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
solana-account-decoder = "2.1"
spl-token = "7.0"
spl-associated-token-account = "6.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Other utilities
anyhow = "1.0"
thiserror = "2.0"
